--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/scroll.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/scroll.html
@@ -5,6 +5,15 @@ specs:
   - Dialog remains open with a large repeated content block.
   - Overflowing content area supports scrollable presentation.
   - Host layout remains stable while dialog is active.
+skipInitialScreenshot: true
+steps:
+  - action: waitFor
+    selector: '#dialog[open]'
+    state: visible
+    timeoutMs: 1200
+  - action: wait
+    ms: 220
+  - action: screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-button id="button">Open Dialog</rtgl-button>
