--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-full.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-full.html
@@ -5,6 +5,7 @@ specs:
   - Full size preset grows dialog width close to viewport bounds.
   - Runtime measurement output reports pass/fail expectation.
   - VT flow opens dialog before screenshot capture.
+skipInitialScreenshot: true
 steps:
   - action: select
     testId: open-full
