--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/size-sm.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/size-sm.html
@@ -5,6 +5,15 @@ specs:
   - Small size preset constrains dialog width.
   - Content spacing remains readable in compact layout.
   - Close event handling stays consistent with sized dialog.
+skipInitialScreenshot: true
+steps:
+  - action: waitFor
+    selector: '#dialog[open]'
+    state: visible
+    timeoutMs: 1200
+  - action: wait
+    ms: 350
+  - action: screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-button id="button">Open Dialog s=sm</rtgl-button>
