--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/width-override.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/width-override.html
@@ -5,6 +5,7 @@ specs:
   - Dialog uses explicit `w=360px` while `s=lg` is also provided.
   - Runtime measurement validates rendered width near target.
   - VT flow captures post-open measured dialog state.
+skipInitialScreenshot: true
 steps:
   - action: select
     testId: open-width
