--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/open.html
@@ -5,6 +5,15 @@ specs:
   - Dialog starts visible with `open` attribute applied.
   - Content layout remains stable without interaction.
   - Close event listener clears dialog open state.
+skipInitialScreenshot: true
+steps:
+  - action: waitFor
+    selector: '#dialog[open]'
+    state: visible
+    timeoutMs: 1200
+  - action: wait
+    ms: 220
+  - action: screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-button id="button">Open Dialog</rtgl-button>
