--- a/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/dialog/test.html
@@ -5,6 +5,7 @@ specs:
   - Select step resolves the test trigger button.
   - Click action opens dialog from closed state.
   - Screenshot captures the resulting visible dialog.
+skipInitialScreenshot: true
 steps:
   - action: select
     testId: open-dialog-test
@@ -18,6 +19,8 @@ steps:
     type: text
     selector: '#dialog'
     value: Medium Dialog
+  - action: wait
+    ms: 220
   - action: screenshot
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
