feat(ui): mobile docs shell + sidebar sm props, VT coverage, and rc7 bump

--- a/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
+++ b/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
@@ -1,7 +1,7 @@
 ---
 title: UI Docs Getting Started
 url: /ui/docs/introduction/getting-started/
-steps:
-  - wait 1200
+waitStrategy: selector
+waitSelector: "#content-container"
 ---
 <main data-testid="ui-docs-getting-started"></main>
