--- a/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
+++ b/apps/rettangoli.dev/vt/specs/critical/ui-docs-getting-started.html
@@ -1,7 +1,12 @@
 ---
 title: UI Docs Getting Started
 url: /ui/docs/introduction/getting-started/
-waitStrategy: selector
-waitSelector: "#content-container"
+steps:
+  - action: waitFor
+    selector: "#content-container"
+    state: visible
+    timeoutMs: 15000
+  - action: wait
+    ms: 1200
 ---
 <main data-testid="ui-docs-getting-started"></main>
