test(vt): stabilize temporal snapshots and refs

--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-01.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-01.html
@@ -5,6 +5,10 @@ specs:
   - Native temporal input types render with RTGL geometry and typography.
   - Default values are visible for date, time, and datetime-local types.
   - Disabled temporal input preserves non-interactive style treatment.
+viewport:
+  id: temporal-wide
+  width: 1600
+  height: 1000
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-view g="sm" w="420">
