--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-boundary-03.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-boundary-03.html
@@ -5,6 +5,10 @@ specs:
   - Leap day date is rendered as a stable fixed value.
   - Boundary min and max values remain visually consistent.
   - Second-level precision renders for time and datetime-local when step is 1.
+viewport:
+  id: temporal-wide
+  width: 1600
+  height: 1000
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-view g="sm" w="460">
