--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-size-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-size-02.html
@@ -5,6 +5,10 @@ specs:
   - Date, time, and datetime-local values render with temporal icons.
   - Small size variant keeps temporal controls aligned and legible.
   - Min, max, and step constrained values keep normal input geometry.
+viewport:
+  id: temporal-wide
+  width: 1600
+  height: 900
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-view g="sm" w="420">
