--- a/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-standalone-04.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/input/input-types-temporal-standalone-04.html
@@ -5,6 +5,10 @@ specs:
   - Standalone temporal primitives render with deterministic values.
   - Min, max, and step attributes are applied on wrapper components.
   - Disabled state matches standard input visual treatment.
+viewport:
+  id: temporal-wide
+  width: 1600
+  height: 900
 ---
 <rtgl-view g="lg" p="lg" wh="f" wrap>
   <rtgl-view g="sm" w="440">
